vpc.tf
resource "aws_vpc" "main"{
cidr_block = "10.0.0.0/16"

}
 
resource "aws_subnet" "public" {

vpc_id                   = aws_vpc.main.id
cidr_block               = "10.0.1.0/24"
availability_zone        = "us-east-1a"
map_public_ip_on_launch  = true

}
resource "aws_subnet" "private"{

vpc_id                   = aws_vpc.main.id        
availability_zone        = "us-east-1a"        
cidr_block               = "10.0.2.0/24"
}


resource "aws_internet_gateway" "igw"{

vpc_id        = aws_vpc.main.id

}
resource "aws_route_table" "public" {
vpc_id                  = aws_vpc.main.id


    route {
       
     cidr_block ="0.0.0.0/0"
     gateway_id =aws_internet_gateway.igw.id     

    }
}
resource "aws_route_table_association" "public" {

subnet_id =  aws_subnet.public.id 
route_table_id = aws_route_table.public.id


}

resource "aws_eip" "nat" {
 
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }
}

resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}

resource "aws_subnet" "public_1b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
}
resource "aws_route_table_association" "public_1b" {

subnet_id =  aws_subnet.public_1b.id
route_table_id = aws_route_table.public.id


}
